--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # ignore stored graffitis in graffiti system
 \[SERP\]/serp_graffiti/storedServerGraffitis.json
 \[SERP\]/serp_graffiti/files/server_graffitis/
+# ignore all the log's
+logs/logs/* 
